Fix layout of Body components - Flex wrap

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
 }
 
 .header-content {
-  @apply relative px-4 py-2 text-lg md:text-xl xl:text-3xl hover:text-pink-400 hover:scale-75 font-semibold cursor-pointer; 
+  @apply relative text-center px-4 py-2 text-lg md:text-xl xl:text-3xl hover:text-pink-400 hover:scale-75 font-semibold cursor-pointer; 
 }
 
 .single-photo-biggest{
@@ -38,84 +38,3 @@ body {
 .description-me{
   @apply font-bold text-xl text-blue-500 group-hover:text-white;
 }
-/* 
-.heart {
-  position: relative;
-  width: 40px;
-  height: 40px;
-  background-color: red;
-  transform: rotate(-45deg);
-}
-.heart:before,
-.heart:after {
-  content: "";
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: red;
-}
-.heart:before {
-  top: -20px;
-  left: 0;
-}
-.heart:after {
-  left: 20px;
-  top: 0;
-}
- */
-
-/*
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
